# dualoj-judge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  log.txt
.github/workflows/: rust.yml
chart/dualoj-judge-api/: Chart.yaml  values.yaml
chart/dualoj-judge-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/dualoj-judge-api/templates/tests/: test-connection.yaml
doc/: 00-Components-zh.md  01-Mirror-zh.md
examples/A+B Problem/: README.md
examples/A+B Problem/judger/: .gitignore  Cargo.toml  Dockerfile  build.rs
examples/A+B Problem/judger/proto/: judger.proto
examples/A+B Problem/judger/src/: lib.rs  main.rs
examples/A+B Problem/solver-bash/: Dockerfile  plus.sh
examples/A+B Problem/solver-error/: main.c
examples/A+B Problem/solver-mle/: .clang-format  main.c
examples/A+B Problem/solver-none/: main.c
examples/A+B Problem/solver-tle/: Dockerfile  main.c
examples/A+B Problem/solver-wa/: Dockerfile  main.hs
manifests/: 00-namespace.yml  00-role.yml  01-judged-network.yml  01-registry.yml  01-serviceaccount.yml  02-buildkitd.yml  02-deployment.yaml  02-deployment.yml  02-rolebinding.yml
proto/: controller.proto  judger.proto
scripts/: k8s-deploy-env.sh  kind-deploy-env.sh  kind-run.sh  kind-update.sh  podman-build-env.sh
src/: lib.rs  proto.rs
src/id/: gen.rs
tools/: k8s-deploy.sh  k8s-wait-controller.sh  kind-run.sh  kind-upcert.sh  kind-update.sh  minikube-upcert-podman.sh  minikube-upcert.sh  minikube-update.sh  mkcerts.sh  podman-build-env.sh  test-a-plus-b.sh  test-build-self.sh  update-buildkit-proto.sh
