[package]
name = "dualoj-judge"
version = "0.1.0"
authors = ["zLeoAlex <z.alex.leo@outlook.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kube = { version = "0.51.0", features = ["ws"] }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.5", features = ["full"] }
tokio-util = { version = "*", features = ["compat"] }
futures = "0.3.13"
url = "2.2.1"
regex = "1.4.5"
glob = "0.3.0"

# Data transfer between server & client
tonic = { version = "0.4.1", features = ["tls"] }
prost = "0.7.0"
prost-types = "0.7.0"

# Some async support
async-trait = "0.1.48"
failure = "0.1.8"

# CLI support
structopt = "0.3.21"

# Archive support
tar = "0.4.33"

# Server Log support
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Archive image management
uuid = { version = "0.8.2", features = ["v5"] }

# Connect to buildkit
# buildkit-proto = "0.2.1"
# buildkit-llb = "0.2.1"
# buildkit-frontend = "0.3.1"

[build-dependencies]
tonic-build = "0.4.1"

# [patch.crates-io]
# buildkit-proto = { path = "vendor/rust-buildkit/buildkit-proto" }
# buildkit-llb = { path = "vendor/rust-buildkit/buildkit-llb" }
# buildkit-frontend = { path = "vendor/rust-buildkit/buildkit-frontend" }
