[package]
name = "dualoj-judge"
version = "0.1.0"
authors = ["zLeoAlex <z.alex.leo@outlook.com>"]
edition = "2021"
default-run = "server"

readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/LeoAlex0/dualoj-judge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kube = { version = "^0", features = ["ws"] }
k8s-openapi = { version = "^0", default-features = false, features = ["v1_20"] }
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "*", features = ["compat"] }
futures = "^0.3"
glob = "0.3.0"

# Data transfer between server & client
tonic = { version = "*", features = ["tls"] }
prost = "*"
prost-types = "*"

# Some async support
async-trait = "*"
failure = "*"

# CLI support
structopt = "^0.3"

# Archive support
tar = "0.4.33"

# Server Log support
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Temporate directory for store directory
temp-dir = "*"

# Archive image management
uuid = { version = "0.8.2", features = ["v4", "v5"] }

[build-dependencies]
tonic-build = "*"
prost-build = { version = "*", features = ["vendored"] }
