[package]
name = "a-plus-b-judger"
version = "0.1.0"
authors = ["zLeoAlex <z.alex.leo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.5"
tonic = "0.4.1"
prost = "0.7.0"
rand = "0.8.3"

[build-dependencies]
tonic-build = "0.4.1"
